--- a/src/blocks/profile.css
+++ b/src/blocks/profile.css
@@ -11,7 +11,8 @@
   flex-direction: column;
   justify-content: center;
   gap: 8px;
-  padding-left: 8px;
+  /* padding-left: 8px; */
+  padding-left: 30px;
   box-sizing: border-box;
 }
 
@@ -71,7 +72,7 @@
 .profile__avatar-info {
   display: flex;
   width: 64%;
-  justify-content: space-between;
+  /* justify-content: space-between; */
 }
 
 .profile__add-button {
